Details
-
Bug
-
Resolution: Done
-
Not Evaluated
-
4.8.2
-
None
-
9338a26614ce6a50a6c1d30e40dfaceacdfd4912 (4.8)
Description
QSortFilterProxyModel: When a filter changes that effects both the parent and children items it can lead to a crash. In the attached example it changes the filter and then invalidates it which then causes a crash. This is because when it is checking the child items it calls createMapping() which invalidates the list it is iterating over.